manifests/trywindeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trywin
  namespace: trywin
  labels:
    app: trywin
spec:
  replicas: 8
  selector:
    matchLabels:
      app: trywin
  template:
    metadata:
      labels:
        app: trywin
    spec:
      containers:
        - name: nginx
          image: pradyumnareddy/trywin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
