manifests/trywinsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: trywin
  namespace: trywin
spec:
  type: ClusterIP
  selector:
    app: trywin
  ports:
    - port: 80
      targetPort: 80
