manifests/ptrywiningress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trywin
  namespace: trywin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: trywin.prajjumnareddy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trywin
                port:
                  number: 80
