manifests/trywiningress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trywinoverseas
  namespace: trywin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: trywinoverseas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trywin
            port:
              number: 80
